prod/force-app/main/default/objects/Soci_t_du_groupe__c/Soci_t_du_groupe__c.object-meta.xml
<CustomObject>
    <label>Société du groupe</label>
    <nameField>
        <label>Nom de Société du groupe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sociétés du groupe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>