prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Adresse_d_envoi_des_factures__c.field-meta.xml
<CustomField>
    <fullName>Adresse_d_envoi_des_factures__c</fullName>
    <label>Adresse d&apos;envoi des factures</label>
    <type>Email</type>
</CustomField>