prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Condition_de_paiement_prioritaire__c.field-meta.xml
<CustomField>
    <fullName>Condition_de_paiement_prioritaire__c</fullName>
    <label>Condition de paiement prioritaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 jours date de facture</fullName>
            </value>
            <value>
                <fullName>30 jours date de facture</fullName>
            </value>
            <value>
                <fullName>30 jours date de facture le 15</fullName>
            </value>
            <value>
                <fullName>30 jours fin de mois</fullName>
            </value>
            <value>
                <fullName>30 jours fin de mois le 10</fullName>
            </value>
            <value>
                <fullName>30 jours fin de mois le 15</fullName>
            </value>
            <value>
                <fullName>30 jours fin de mois le 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>