prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Date_calcul_r_vision__c.field-meta.xml
<CustomField>
    <fullName>Date_calcul_r_vision__c</fullName>
    <label>Date calcul révision</label>
    <type>Date</type>
</CustomField>