prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Deactivate_Contract_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Contract_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Contract Conversion</label>
    <type>Checkbox</type>
</CustomField>