prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Deactivate_Contract_Conversion_Message__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Contract_Conversion_Message__c</fullName>
    <label>Deactivate Contract Conversion Message</label>
    <type>TextArea</type>
</CustomField>