prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Enseigne__c.field-meta.xml
<CustomField>
    <fullName>Enseigne__c</fullName>
    <label>Enseigne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>