prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Forme_juridique__c.field-meta.xml
<CustomField>
    <fullName>Forme_juridique__c</fullName>
    <label>Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privé</fullName>
            </value>
            <value>
                <fullName>Publique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>