prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Fr_quence_de_r_vision__c.field-meta.xml
<CustomField>
    <fullName>Fr_quence_de_r_vision__c</fullName>
    <label>Fréquence de révision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>