prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Informations_compl_mentaires__c.field-meta.xml
<CustomField>
    <fullName>Informations_compl_mentaires__c</fullName>
    <label>Informations complémentaires</label>
    <type>TextArea</type>
</CustomField>