prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Nom_de_la_raison_sociale__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_la_raison_sociale__c</fullName>
    <label>Nom de la raison sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>