prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>SIREN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>