prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIRET__c</fullName>
    <label>SIRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>