prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/Site_web__c.field-meta.xml
<CustomField>
    <fullName>Site_web__c</fullName>
    <label>Site web</label>
    <type>Url</type>
</CustomField>