prod/force-app/main/default/objects/Soci_t_du_groupe__c/fields/T_l_phone__c.field-meta.xml
<CustomField>
    <fullName>T_l_phone__c</fullName>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>