prod/force-app/main/default/objects/Soci_t_du_groupe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IdentifiantSoci_t_grpupe__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les Mandants</label>
</ListView>